feat(device-sessions): implement Phase 3 application integration for issue #23
- Integrate device sessions into chat endpoint with workspace resolution
- Add token metering for input/output tracking in chat responses
- Create device management endpoints (create, revoke, info)
- Implement workspace precedence (thread > device > none)
- Configure Ruff to allow FastAPI Depends pattern (B008)
- Fix all linting issues (B904)

This completes the application integration layer with full device session
support in the chat workflow and management endpoints for device lifecycle.

--- a/agent-core/pyproject.toml
+++ b/agent-core/pyproject.toml
@@ -48,7 +48,7 @@ target-version = "py311"
 
 [tool.ruff.lint]
 select = ["E", "F", "I", "W", "B"]  # Removed "N" to allow camelCase for API compatibility
-ignore = ["E501"]  # Line too long (handled by black)
+ignore = ["E501", "B008"]  # E501: Line too long (handled by black), B008: Allow Depends() in FastAPI
 
 [tool.black]
 line-length = 88
