fix: address PR review feedback for PostgreSQL cache
- Fix invalid interval binding in stale-if-error query (use INTERVAL '1 second' * :grace)
- Fix ANY(:tags) array binding with explicit cast to ::text[]
- Add transaction scope for advisory locks with async context manager
- Wire cache backend selector in cache_service.py with get_cache_service()
- Move TTL policies to centralized location in cache_service.py
- Add comprehensive cache settings to .env.example
- Add integration tests for all cache operations

Addresses all 10 review comments:
1. ✅ Fixed interval binding syntax
2. ✅ Fixed array type casting
3. ✅ Added transaction scope
4. ✅ Wired backend selector
5. ✅ Centralized TTL policies
6. ✅ Handled duplicate index (kept in model)
7. ✅ Noted BigInteger migration comment
8. ✅ Added cache size limit to settings
9. ✅ Verified CASCADE delete for tags
10. ✅ Added stale telemetry

Tests cover:
- Happy path get/set with TTL metadata
- Size limit rejection
- Tag-based invalidation
- Expired entry cleanup
- Stale-if-error fallback
- Advisory lock singleflight pattern

--- a/agent-core/.env.example
+++ b/agent-core/.env.example
@@ -116,12 +116,29 @@ FEATURE_NOTION_HOSTED_MCP=true
 # CACHE CONFIGURATION
 # ============================================
 
+# Cache backend: memory (default) or postgres
+CACHE_BACKEND=memory
+
 # Default cache TTL in seconds (0 to disable)
 CACHE_TTL_DEFAULT=3600  # 1 hour
 
-# Tool-specific cache TTLs
-CACHE_TTL_NOTION=300    # 5 minutes
-CACHE_TTL_GITHUB=900    # 15 minutes
+# Tool-specific cache TTLs (overrides DEFAULT_TTL_POLICIES)
+# Format: CACHE_TTL_{PROVIDER}_{TOOL}=seconds
+CACHE_TTL_NOTION_GET_PAGE=14400    # 4 hours for documents
+CACHE_TTL_NOTION_SEARCH=14400      # 4 hours for search
+CACHE_TTL_NOTION_GET_DATABASE=86400  # 24 hours for schema
+CACHE_TTL_GITHUB_GET_REPO=86400    # 24 hours for repo metadata
+CACHE_TTL_GITHUB_GET_FILE=14400    # 4 hours for file content
+CACHE_TTL_GITHUB_SEARCH=3600       # 1 hour for search
+
+# Maximum cache entry size in KB (default: 250)
+CACHE_MAX_ENTRY_SIZE_KB=250
+
+# Cache cleanup interval in seconds (PostgreSQL only)
+CACHE_CLEANUP_INTERVAL=300  # 5 minutes
+
+# Cache cleanup batch size (PostgreSQL only)
+CACHE_CLEANUP_BATCH_SIZE=1000
 
 # ============================================
 # RATE LIMITING (Week 4)
