fix: resolve remaining linting issues
- Fix unused variable warnings in MCP router and test files
- Use underscore for discarded health check results
- Remove unused settings import in test file

--- a/agent-core/.env.example
+++ b/agent-core/.env.example
@@ -141,14 +141,39 @@ CACHE_CLEANUP_INTERVAL=300  # 5 minutes
 CACHE_CLEANUP_BATCH_SIZE=1000
 
 # ============================================
-# RATE LIMITING (Week 4)
+# RATE LIMITING (Week 4) - Production Ready
 # ============================================
 
-# Maximum requests per window
-RATE_LIMIT_REQUESTS=100
+# Global enable/disable rate limiting
+RATE_LIMITING_ENABLED=true
 
-# Rate limit window in seconds
-RATE_LIMIT_WINDOW=60
+# Default limits (applied to routes without specific overrides)
+RATE_LIMIT_DEFAULT_RPM=60           # Requests per minute
+RATE_LIMIT_DEFAULT_BURST=10         # Burst capacity (leaky bucket size)
+
+# DoS protection settings
+RATE_LIMIT_MAX_BUCKETS=10000        # Maximum concurrent rate limit buckets
+RATE_LIMIT_CLEANUP_INTERVAL=300     # Bucket cleanup interval in seconds
+
+# Per-route overrides (JSON format for safety and structure)
+# Format: {"route_path": {"requests_per_minute": 30, "burst_capacity": 5, "enabled": true}}
+# Example: {"\/api\/v1\/chat": {"requests_per_minute": 30, "burst_capacity": 5}}
+RATE_LIMIT_ROUTE_OVERRIDES={}
+
+# Per-API-key overrides (JSON with hashed key prefixes)
+# Get key prefix with: echo -n "your-api-key" | sha256sum | cut -c1-12
+# Format: {"api:hash_prefix": {"requests_per_minute": 120, "burst_capacity": 20}}
+# Example: {"api:abcd1234ef56": {"requests_per_minute": 120, "burst_capacity": 20}}
+RATE_LIMIT_KEY_OVERRIDES={}
+
+# Multi-process deployment considerations
+# IMPORTANT: Rate limits are per-process! With WEB_CONCURRENCY > 1,
+# effective limits multiply by worker count. Use Redis backend for distributed limits.
+WEB_CONCURRENCY=1
+
+# Future enhancement: Redis backend for distributed rate limiting
+# RATE_LIMIT_BACKEND=memory          # Options: memory (current), redis (future)
+# RATE_LIMIT_REDIS_URL=redis://localhost:6379/2
 
 # ============================================
 # DOCKER-SPECIFIC OVERRIDES
