feat(hardening): implement comprehensive production hardening (#31)
- Add ASGI timeout middleware with SSE exemption using anyio
- Implement size limit middleware with per-endpoint limits and receive wrapper
- Create security headers middleware with path-aware CSP configuration
- Add SSE-safe GZip middleware to prevent stream buffering
- Enhanced CORS configuration with explicit header enumeration
- Create hardened HTTP client utilities with circuit breakers and retry logic
- Add comprehensive production hardening settings to config
- Document all hardening environment variables in .env.example
- Include validation test script for all hardening measures
- Follow proper middleware order: Security → Timeout → Size → Rate → CORS → GZip → Logging

Key technical decisions:
- Use ASGI middleware pattern instead of BaseHTTPMiddleware for better streaming support
- Implement SSE exemptions for /api/v1/chat/stream endpoints
- Path-aware CSP policies: strict for API, relaxed for docs, minimal for SSE
- Circuit breaker pattern for external service resilience
- Exponential backoff with jitter for HTTP client retries

Closes #31

--- a/agent-core/.env.example
+++ b/agent-core/.env.example
@@ -176,6 +176,42 @@ WEB_CONCURRENCY=1
 # RATE_LIMIT_REDIS_URL=redis://localhost:6379/2
 
 # ============================================
+# PRODUCTION HARDENING (Issue #31)
+# ============================================
+
+# Timeout Configuration
+REQUEST_TIMEOUT_SECONDS=30          # Max request processing time (excludes SSE)
+KEEPALIVE_TIMEOUT_SECONDS=5         # HTTP keep-alive timeout
+ANTHROPIC_TIMEOUT_SECONDS=60        # Anthropic API timeout
+MCP_TIMEOUT_SECONDS=30              # MCP server timeout
+SSE_MAX_DURATION_MINUTES=15         # Maximum SSE streaming duration
+
+# Size Limits
+MAX_REQUEST_SIZE_MB=10              # Max request body size in MB
+MAX_CHAT_HISTORY_MESSAGES=100       # Max chat history length
+MAX_MESSAGE_CONTENT_KB=100          # Max individual message size in KB
+MAX_TOOL_ARGS_KB=50                 # Max tool arguments size in KB
+
+# Enhanced CORS Configuration
+CORS_ALLOW_CREDENTIALS=true         # Allow credentials in CORS requests
+CORS_ALLOW_METHODS=GET,POST,PUT,DELETE,OPTIONS  # Allowed HTTP methods
+CORS_ALLOW_HEADERS=Content-Type,Authorization,X-Request-ID  # Never use * with credentials
+CORS_MAX_AGE=86400                  # CORS preflight cache time
+
+# Security Headers
+SECURITY_HEADERS_ENABLED=true       # Enable security headers middleware
+HSTS_ENABLED=false                  # Enable HSTS (only for HTTPS production)
+CSP_ENABLED=true                    # Enable Content Security Policy
+CSP_REPORT_ONLY=true               # CSP in report-only mode (recommended for initial deployment)
+
+# Proxy Configuration
+TRUSTED_HOSTS=*                     # Trusted hosts (use specific domains in production)
+FORWARDED_ALLOW_IPS=127.0.0.1,::1  # IPs allowed to send proxy headers
+
+# Development/Production Feature Flags
+DEV_MODE_RELAXED_SECURITY=true      # Relax some security settings in development
+
+# ============================================
 # DOCKER-SPECIFIC OVERRIDES
 # ============================================
 
