--- a/agent-core/pyproject.toml
+++ b/agent-core/pyproject.toml
@@ -21,6 +21,8 @@ dependencies = [
     "websockets>=12.0",
     # Anthropic client
     "anthropic>=0.7.0",
+    # HTTP client resilience patterns
+    "tenacity>=8.2.0",
     # Utilities
     "python-dotenv>=1.0.0",
     "structlog>=23.1.0",
